## Changelog

### 0.6.4
* Changed payload limit error message

### 0.6.3
* Fix to drop progress notificaiton and ignore when an error occurs

### 0.6.2
* Fixed context issue when an error occurs processing a task
* Added cleanup of keys for when a task times out

### 0.6.1
* Several bug fixes
* Added test coverage for notification bus

### 0.6.0
* Complete refactor of Node Background Tasks. 
  * BREAKING CHANGE:  Ending the client and workers now use shutdown() command instead of end()
  * Refactored background_task to return sepearate objects, either a TaskClient or TaskServer, which each have their own methods
  * Removed messageBus and replaced with a data_store for reading/writing to logical data entites, and a notification_bus for message notifications
  * All redis interaction has been moved to redis_client
  * notification_bus only handles sending and processing of data.  The former methods to accept a task and complete a task have been pulled up into the task client and server
  * Concept of progressBus and messageBus have been removed and replaced with a single notification bus with different status.

### 0.5.3
* Make sure progressBus is ready when new task is received
* Changed initial sendMessage order

### 0.5.2
* Added some additional error logging
* Fixed issues with unit tests
* Upgrade to node_redis v0.8.6
* Modified test cases for auth check based on the fact that node_redis no longer returns an error message when a password is supploed but not required
* Added logging for progressBus.sendMessage callback to trap if an error occurs

### 0.5.1
* Fixed a leak of event listeners whenever an error was signaled.

### 0.5.0
* Added a taskTimeout to set the timeout value for an individual task
* Moved progress events to a seperate bus, updated tests.
* Improved test setup to get rid of test delays

### 0.4.2
* Fixed a leak of event listeners whenever an error was signaled (bug fix on 0.4.x branch, also added to 0.5.x branch version 0.5.1)

### 0.4.1