@@ -185,7 +185,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(message);
       precond.checkArgument(max);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -220,7 +220,7 @@ exports.initialize = function (options, callback) {
     try {
       precond.checkArgument(key);
     } catch(e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -249,7 +249,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(timeout);
       precond.checkArgument(max);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -288,7 +288,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(timeout);
       precond.checkArgument(value);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -313,7 +313,7 @@ exports.initialize = function (options, callback) {
     try {
       precond.checkArgument(key);
     } catch(e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -352,7 +352,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(key);
       precond.checkArgument(value);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
@@ -381,7 +381,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(id);
       precond.checkArgument(message);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid Argument"));
       return;
     }
 
@@ -408,7 +408,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(hash);
       precond.checkArgument(id);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid Argument"));
       return;
     }
 
