@@ -25,7 +25,7 @@ var uuid = require('node-uuid'),
   MEGABYTES = 1024 * 1024,
   async = require('async'),
   precond = require('precond'),
-  version = require('../package.json').version,
+  apiLevel = 2,
   makeId;
 
 
@@ -114,7 +114,7 @@ exports.initialize = function (options, callback) {
       options = {};
     }
 
-    this.version = version;
+    this.apiLevel = apiLevel;
 
     // The listenChannel is the primary channel for this sender/receiver
     this.listenChannel = "msgChannels:" + makeId();
@@ -123,7 +123,7 @@ exports.initialize = function (options, callback) {
     this.baseHash = (options && options.baseHash) || ":normal";
 
     // The broadcast channel
-    this.broadcastChannel = (options && options.broadcast) || "broadcast:" + version;
+    this.broadcastChannel = (options && options.broadcast) || "broadcast:level" + this.apiLevel;
 
     // Optional argument for custom statuses.  The hashMap contains a status and its appropriate hash.
     if (options && options.hashMap) {
