@@ -461,7 +461,7 @@ exports.initialize = function (options, callback) {
       precond.checkArgument(hash);
       precond.checkArgument(key);
     } catch (e) {
-      callback(e);
+      callback(new Error("Invalid argument"));
       return;
     }
 
