@@ -181,7 +181,7 @@ exports.initialize = function (options) {
     }
 
     if (!that.idToChannelMap[taskId]) {
-      throw new Error("Attempt to respond to message that was never accepted");
+      throw new Error("Attempt to respond to message that was never accepted: Task ID "+ taskId);
     }
 
     // We can't send Error's via JSON...
