@@ -2,6 +2,10 @@
 
 ### 0.6.4
 * Changed payload limit error message
+* Changed use of version to API level to allow for mixed versions of the same level to exist
+* Improved precondition error handling
+* Added more informational error messages for exceeding payload
+* Added more informational error message for attempting to respond to a task that wasn't accepted
 
 ### 0.6.3
 * Fix to drop progress notificaiton and ignore when an error occurs
